# whatif

./: .rustfmt.toml  Cargo.toml  Makefile  README.md  index.html
data/: price_history.csv
docs/: index.html  whatif.d.ts  whatif.js  whatif_bg.wasm.d.ts
src/: bitcoin.rs  calculator.rs  coinmarketcap.rs  dollar.rs  historical_data.rs  main.rs  numeric_input.rs  price_lookup.rs  ui.rs
