[package]
name = "whatif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.0"
iced = { version = "0.12", features = ["tokio", "lazy"] }
iced_aw = { version = "0.8.0", default-features = false, features = [
    "date_picker",
] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros"] }
